Add new logo assets for TR and URB
- Added TR logo image (trlogo.png) to the assets directory.
- Added URB logo image (urblogo.png) to the assets directory.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="twitter:site" content="@Softsmartz" />
     
     <link rel="canonical" href="https://softsmartz.com" />
+    <link rel="icon" href="/placeholder.svg" />
+    <link rel="shortcut icon" href="/placeholder.svg" />
+    <link rel="apple-touch-icon" href="/placeholder.svg" />
   </head>
 
   <body>
