Added the functionlity

--- a/index.html
+++ b/index.html
@@ -19,6 +19,40 @@
     <link rel="icon" href="/placeholder.svg" />
     <link rel="shortcut icon" href="/placeholder.svg" />
     <link rel="apple-touch-icon" href="/placeholder.svg" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Softsmartz",
+        "url": "https://softsmartz.com",
+        "logo": "https://softsmartz.com/logo.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "",
+          "contactType": "customer service",
+          "areaServed": "IN",
+          "availableLanguage": "en"
+        },
+        "sameAs": [
+          "https://twitter.com/Softsmartz",
+          "https://www.linkedin.com/company/softsmartz"
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://softsmartz.com",
+        "name": "Softsmartz",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://softsmartz.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
 
   <body>
