--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Softsmartz - Digital Solutions & Software Development</title>
-    <meta name="description" content="Softsmartz delivers innovative software development, AI/ML solutions, UI/UX design, and web & mobile app development services to transform your business." />
-    <meta name="author" content="Softsmartz" />
-    <meta name="keywords" content="software development, web development, app development, AI, machine learning, UI/UX design, Shopify, digital solutions" />
 
-    <meta property="og:title" content="Softsmartz - Digital Solutions & Software Development" />
-    <meta property="og:description" content="Transform your vision into powerful reality with our innovative software solutions, stunning designs, and AI-powered applications." />
-    <meta property="og:type" content="website" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Softsmartz - Digital Solutions & Software Development</title>
+  <meta name="description"
+    content="Softsmartz delivers innovative software development, AI/ML solutions, UI/UX design, and web & mobile app development services to transform your business." />
+  <meta name="author" content="Softsmartz" />
+  <meta name="keywords"
+    content="software development, web development, app development, AI, machine learning, UI/UX design, Shopify, digital solutions" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Softsmartz" />
-    
-    <link rel="canonical" href="https://softsmartz.com" />
-    <link rel="icon" href="/placeholder.svg" />
-    <link rel="shortcut icon" href="/placeholder.svg" />
-    <link rel="apple-touch-icon" href="/placeholder.svg" />
+  <meta property="og:title" content="Softsmartz - Digital Solutions & Software Development" />
+  <meta property="og:description"
+    content="Transform your vision into powerful reality with our innovative software solutions, stunning designs, and AI-powered applications." />
+  <meta property="og:type" content="website" />
 
-    <script type="application/ld+json">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Softsmartz" />
+
+  <link rel="canonical" href="https://softsmartz.com" />
+  <link rel="icon" href="/favicon.png" />
+  <link rel="shortcut icon" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
@@ -40,7 +44,7 @@
         ]
       }
     </script>
-    <script type="application/ld+json">
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
@@ -53,10 +57,11 @@
         }
       }
     </script>
-  </head>
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
